# pysota

./: .gitignore  README.md  database.db  excludes.yaml  main.py  process.py  pyproject.toml  ruff.toml  search.py  tasks.py  uv.toml
notebooks/: 01_test.ipynb  01_test.py  02_clustering.ipynb  02_clustering.py  03_topic.ipynb  03_topic.py  04_bertopic.ipynb  04_bertopic.py  bertopic.ipynb  clustering.ipynb  test.md  topic.ipynb
src/pysota/: __init__.py  definitions.py  search.py
src/pysota/cli/: app.py  clean.py  cluster.py  db.py  db_build.py  progress.py  search.py  test.py  topic.py  version.py
src/pysota/core/: __init__.py  cluster_container.py  library.py  persistence.py  provider.py  publication.py  query.py  result_page.py  search_engine.py
src/pysota/db/: models.py  session.py
src/pysota/process/: __init__.py  bow.py  cleaner.py  clustering.py  frequency_counter.py  persistence.py  topic_modeler.py
src/pysota/search/: __init__.py  arxiv.py  crossref.py  doaj.py  engine.py  open_alex.py  scholarly.py  semantic_scholar.py
src/pysota/services/: __init__.py  arxiv.py  crossref.py  epmc.py  pubmed.py  semantic_scholar.py
