[project]
name = "pysota"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "omegaconf>=2.3.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]
